# MechAudit

./: .gitignore  LIMITATIONS.md  NOTICE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
benchmark/: README.md
benchmark/real_world/: TEMPLATE.md  rw-pressure-vessel-claude-0001.md  rw-pressure-vessel-claude-0002.md  rw-pressure-vessel-gemini-0001.md  rw-pressure-vessel-gpt-0001.md  rw-pressure-vessel-gpt-0002.md  rw-stress-concentration-claude-haiku-0001.md  rw-stress-concentration-claude-haiku-0002.md  rw-stress-concentration-claude-haiku-0003.md  rw-stress-concentration-codex-gpt54mini-0001.md  rw-stress-concentration-codex-gpt54mini-0002.md  rw-stress-concentration-codex-gpt55-0001.md  rw-stress-concentration-codex-gpt55-0002.md
benchmark/synthetic/: syn-arith-0001.md  syn-cantilever-0001.md  syn-fm01-0001.md  (+4 more)
captures/: README.md  SESSION_2026-06-25.md  SESSION_2026-06-26.md  SESSION_2026-06-26_CODEX.md
docs/: capture_provenance.md  failure_taxonomy.md  real_case_classification_rubric.md  schema_contract.md  tolerance_policy.md  v1_plan.md
mechaudit/: __init__.py  audit_result.py  capture.py  case_loader.py  cli.py  pressure_vessel.py  report_writer.py  stress_concentration.py
prompts/: pressure_vessel_prompt_v1.md
tests/: test_capture.py  test_cli.py  test_cli_eval.py  test_committed_captures.py  test_detection_mutations.py  test_formula_calculations.py  test_ground_truth_references.py  test_provenance_schema.py  test_real_world_cases.py  test_stress_concentration_detection.py  test_synthetic_cases.py  test_unit_consistency.py
(+93 files in other folders)
