[project]
name = "mechaudit"
version = "0.1.0"
description = "Benchmark-driven verifier for LLM-generated mechanical engineering calculations."
requires-python = ">=3.11"
dependencies = [
  "pint>=0.23",
  "pydantic>=2.7",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0,<9.0",
]

[project.scripts]
mechaudit = "mechaudit.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["mechaudit*"]
